added infomsg, upd readme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <body>
-    <div class='dropzone' style='width: 500px; height: 500px; border: solid black 2px'></div>
+    <div class='dropzone' style='width: 500px; height: 500px; border: solid black 2px'>
+      drag & drop files/directories here and check logs in dev console
+    </div>
     <script src='index.js'></script>
     <script>
       const dropzone = document.querySelector('.dropzone')
