--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <div class='dropzone' style='width: 500px; height: 500px; border: solid black 2px'>
       drag & drop files/directories here and check logs in dev console
     </div>
-    <script src='https://htmlpreview.github.io/?https://github.com/grabantot/datatransfer-files-promise/blob/master/index.html'></script>
+    <script src='https://htmlpreview.github.io/?https://github.com/grabantot/datatransfer-files-promise/blob/master/index.js'></script>
     <script>
       const dropzone = document.querySelector('.dropzone')
       dropzone.addEventListener('dragover', evt => evt.preventDefault())
